--- a/Montagsmaler.html
+++ b/Montagsmaler.html
@@ -48,7 +48,7 @@
       </p>
     </div>
 
-    <div class="feature-div1-repeat">
+   <div class="feature-div1-repeat">
       <h1 class="heading2">Montagsmaler</h1>
 
       <span class="scoreOut">0</span>
@@ -61,6 +61,17 @@
         <button class="back-to-feature-div" onclick="changeToFeatureDiv()">
           Zurück zum den Features
         </button>
+      </div>
+
+      <div class="words-out-countainer">
+        <div class="true-word">
+          True-Words:
+          <ul class="true-word-list"></ul>
+        </div>
+        <div class="false-word">
+          False-Words:
+          <ul class="false-word-list"></ul>
+        </div>
       </div>
     </div>
 
